Add a Multipole benchmark for SIMD code path